feat(userContent): added new endpoints for updating notes and favorites
